[gd_scene load_steps=2 format=3 uid="uid://cvei22r1caivk"]

[ext_resource type="Script" uid="uid://d2t2vytxmg5qo" path="res://UI/options/options.gd" id="1_58yf8"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_58yf8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -56.0
offset_right = 79.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Master"

[node name="SFX" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "SFX"

[node name="Music" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
max_value = 3.0
step = 0.1

[node name="SFX" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
max_value = 3.0
step = 0.1

[node name="Music" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
max_value = 3.0
step = 0.1

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back
"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
